[master] fixing GHPage Images (1)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <base href="/">
   </head>
   <body>
     <header>
@@ -34,12 +33,12 @@
           <p>There are millions of songs on Spotify</p>
         </content>
         <content>
-          <img src="./images/high-quality-icon.png" alt="images/high-quality-icon">
+          <img src="./images/high-quality-icon.png" alt="high-quality-icon">
           <h3>HD Music</h3>
           <p>Listen to music as if you were listening live</p>
         </content>
         <content>
-          <img src="./images/devices-icon.png" alt="images/devices-icon">
+          <img src="./images/devices-icon.png" alt="devices-icon">
           <h3>Stream Everywhere</h3>
           <p>Stream music on your smartphone, tablet or computer</p>
         </content>
